fix question manager overflow

--- a/quizdle/src/pages/QuestionManager/QuestionManager.css
+++ b/quizdle/src/pages/QuestionManager/QuestionManager.css
@@ -15,6 +15,7 @@
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 1000px;
+  overflow-y: auto;
 }
 
 .fragetext {
